syntax = "proto3";

package proto;
option go_package = "pkg/pb";

message SPushRequest {
  bytes key = 1;
  repeated bytes values = 2;
  bool sync = 100;
}

message SPushResponse {
  bool success = 1;
}

message SPopRequest {
  bytes key = 1;
  repeated bytes values = 2;
  bool sync = 100;
}

message SPopResponse {
  bool success = 1;
}

message SExistRequest {
  bytes key = 1;
  repeated bytes values = 2;
}

message SExistResponse {
  repeated bool exists = 1;
}

message SDelRequest {
  bytes key = 1;
  bool sync = 100;
}

message SDelResponse {
  bool success = 1;
}

message SCountRequest {
  bytes key = 1;
}

message SCountResponse {
  int32 count = 1;
}